Update title and content for Recipe Finder

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<html><body><h1>Book Finder</h1></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Recipe Finder</title>
+</head>
+<body>
+  <h1>Recipe Finder</h1>
+  <p>Find your favorite recipes here.</p>
+</body>
+</html>
