--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Recipe Finder</title>
+  <title>Book Finder</title>
 </head>
 <body>
-  <h1>Recipe Finder</h1>
-  <p>Find your favorite recipes here.</p>
+  <h1>Book Finder</h1>
+  <p>Discover books from your favorite authors.</p>
 </body>
 </html>
